Implement set round status POST endpoints. Update openapi.
